--- a/sub.html
+++ b/sub.html
@@ -3,7 +3,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 </head>
 <body>
-This is My Home Page!!!!!!!<br>
-<a href="/sub.html">sub page</a>
+ sub page....<br>
+<a href="/">main page</a>
 </body>
 </html>
