--- a/content/index.html
+++ b/content/index.html
@@ -70,14 +70,17 @@
         <div class="ww-section bg-light" id="events">
             <div class="container ww-wedding-event">
                 <h2 class="h1 text-center pb-3 ww-title" style="font-family: 'Noto Serif KR', serif;">초대합니다</h2>
-                    <div class="col text-center mb-5">
+                    <div class="col text-left mb-5">
                         <h6 style="font-family: 'Noto Serif KR', serif;">
                             <br>
-                            저희 두 사람이 소중한 인연이 되어,
-							서로에 대한 믿음과 이해와 사랑으로
-							새 출발의 첫걸음을 내딛습니다.
-							함께 자리하여 축복과 격려 주시면
-							더없는 기쁨으로 간직하겠습니다.
+							아들 안효진이 결혼 합니다 ~^^<br><br> 오셔서 축복해주시면 큰 기쁨이겠습니다.
+							<br><br>
+							<div class="col text-left">
+							일자 :  2020년 5월  30일 (토)<br>
+							시간 :  낮 12시30분<br>
+							장소 :  서울특별시 구로구 경인로 565 (구로동)<br><br> 
+							혼주계좌번호 : 안우찬 국민은행 01088653314
+							</div>
                         </h6>
                     </div>
                 <div class="row">
