--- a/content01/index.html
+++ b/content01/index.html
@@ -38,7 +38,7 @@
                 <div class="container ww-announcement-container">
                     <p class="ww-couple-name ww-title" style="font-size:4.0em">효진 & 나경</p>
                     <p class="h2 mt-5 ww-title" style="font-family: 'Gugi', cursive; font-size:1.0em">
-                        | WE ARE GETTING MARRIED |
+                         WE ARE GETTING MARRIED 
                     </p>
                     <p class="h2 mt-5 ww-title"
                        style="font-family: 'Noto Serif KR', serif; font-size:1.0em; letter-spacing:-1px">
@@ -73,24 +73,23 @@
                     <div class="col text-left mb-5">
                         <h6 style="font-family: 'Noto Serif KR', serif;">
                             <br>
-							아들 안효진이 결혼 합니다 ~^^<br><br> 오셔서 축복해주시면 큰 기쁨이겠습니다.
+							저희 두 사람이 소중한 인연이 되어, 서로에 대한 믿음과 이해와 사랑으로 새 출발의 첫걸음을 내딛습니다. 함께 자리하여 축복과 격려 주시면 더없는 기쁨으로 간직하겠습니다.
 							<br><br>
 							<div class="col text-left">
-							일자 :  2020년 5월  30일 (토)<br>
-							시간 :  낮 12시30분<br>
-							장소 :  서울특별시 구로구 경인로 565 (구로동)<br><br> 
-							혼주계좌번호 : 안우찬 국민은행 01088653314
+							일자 :  2020년 11월  07일 (토)<br>
+							시간 :  낮 01시00분<br>
+							장소 :  서울특별시 구로구 경인로 565 (구로동)
 							</div>
                         </h6>
                     </div>
                 <div class="row">
                     <div class="col-md-7 col-sm-12">
                         <div class="my-3">
-                            <div class="h4">모바일 첩정장 </div>
+                            <div class="h4">모바일 첩접장 </div>
                             <ul>
                                 <li>
                                     <i class="text-muted fas fa-map-marker-alt"></i>
-                                    <span class="pl-2 text-muted"><a href="http://bojagicard.com/g/home.php?ecard=mygod0522"><모바일 첩정장 보러가기></span>
+                                    <span class="pl-2 text-muted"><a href="http://bojagicard.com/g/home.php?ecard=mygod0522"><모바일 첩접장 보러가기></span>
                                 </li>
                             </ul>
                         </div>
