--- a/content01/index.html
+++ b/content01/index.html
@@ -85,11 +85,11 @@
                 <div class="row">
                     <div class="col-md-7 col-sm-12">
                         <div class="my-3">
-                            <div class="h4">모바일 첩접장 </div>
+                            <div class="h4">모바일 청접장 </div>
                             <ul>
                                 <li>
                                     <i class="text-muted fas fa-map-marker-alt"></i>
-                                    <span class="pl-2 text-muted"><a href="http://bojagicard.com/g/home.php?ecard=mygod0522"><모바일 첩접장 보러가기></span>
+                                    <span class="pl-2 text-muted"><a href="http://bojagicard.com/g/home.php?ecard=mygod0522"><모바일 청접장 보러가기></span>
                                 </li>
                             </ul>
                         </div>
